--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -5,7 +5,7 @@
       "DataflowAnalysisEnabled": false,
       "DataflowAnalysisFlagStateToggledByUser": false
     },
-    "DocVersion": "1.336",
+    "DocVersion": "1.341",
     "MinVersionToLoad": "1.331",
     "MSAppStructureVersion": "2.0"
   },
@@ -22,6 +22,7 @@
       "blockmovingcontrol": true,
       "cdsdataformatting": false,
       "classiccontrols": false,
+      "commentgeneratedformulas": true,
       "consistentreturnschemafortabularfunctions": true,
       "copyandmerge": true,
       "dataflowanalysisenabled": false,
@@ -29,6 +30,7 @@
       "dataverseactionsenabled": false,
       "delaycontrolrendering": false,
       "delayloadscreens": true,
+      "disablebehaviorreturntypecheck": false,
       "disablecdsfileandlargeimage": false,
       "disableruntimepolicies": false,
       "dynamicschema": false,
@@ -36,20 +38,19 @@
       "enablechatbotfeature": false,
       "enablecomponentnamemaps": false,
       "enablecomponentscopeoldbehavior": false,
+      "enablecopilotanswercontrol": false,
       "enablecopilotcontrol": false,
       "enabledataverseoffline": false,
       "enableeditcacherefreshfrequency": false,
+      "enableeditinmcs": false,
       "enableexcelonlinebusinessv2connector": true,
-      "enableexperimentaldataverseoffline": false,
       "enableideaspanel": true,
-      "enablelargefilesindataverseoffline": false,
       "enablelegacybarcodescanner": false,
       "enableonstart": true,
       "enableonstartnavigate": false,
       "enablepcfmoderndatasets": true,
       "enablerowscopeonetonexpand": false,
       "enablerpawarecomponentdependency": true,
-      "enablerulespanel": false,
       "enablesaveloadcleardataonweb": false,
       "enableupdateifdelegation": false,
       "errorhandling": false,
@@ -62,7 +63,6 @@
       "formularepair": true,
       "generatedebugpublishedapp": false,
       "herocontrols": false,
-      "improvedmediacapture": false,
       "improvedtabstopbehavior": true,
       "isemptyrequirestableargument": true,
       "keeprecentscreensloaded": true,
@@ -76,17 +76,17 @@
       "pdffunction": false,
       "powerfxdecimal": false,
       "powerfxv1": false,
-      "primaryoutputpropertycoerciondeprecated": false,
+      "primaryoutputpropertycoerciondeprecated": true,
       "projectionmapping": true,
       "reactformulabar": false,
       "reliableconcurrent": true,
       "reservedkeywords": false,
-      "reverttooldpowerautomate": false,
       "rtlinstudiopreview": false,
       "rtlsupport": false,
       "showclassicthemes": false,
       "smartemaildatacard": false,
-      "supportcolumnnamesasidentifiers": false,
+      "sqlstoredprocedureenabled": false,
+      "supportcolumnnamesasidentifiers": true,
       "tabledoesntwraprecords": true,
       "usedisplaynamemetadata": true,
       "useenforcesavedatalimits": true,
@@ -94,11 +94,12 @@
       "useexperimentalsqlconnector": true,
       "useguiddatatypes": true,
       "usenonblockingonstartrule": true,
+      "userdefinedfunctions": false,
       "webbarcodescanner": false,
       "zeroalltabindexes": false
     },
     "Author": "",
-    "BindingErrorCount": 2,
+    "BindingErrorCount": 20,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 1000,
     "DocumentAppType": "Phone",
@@ -113,7 +114,7 @@
     "FileID": "c94859fd-2ebb-4cb5-abca-4ae066f946de",
     "Id": "3aaae7a9-6de1-4749-802c-2ff7999f4249",
     "InstrumentationKey": "",
-    "LocalDatabaseReferences": "{}",
+    "LocalDatabaseReferences": "",
     "ManualOfflineProfileId": "",
     "Name": "Levantamento de Perdas - Transmissões",
     "OriginatingVersion": "1.324",
