--- a/Levantamento de Perdas/Src/Tela_Inicial_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Inicial_Producao.fx.yaml
@@ -69,6 +69,7 @@
         ZIndex: =8
 
     "BrowseGallery1 As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver4.0'":
+        '#CopilotOverlayLabel': ="Filtrada"
         FocusedBorderColor: =
         Height: =856
         Items: |-
@@ -106,7 +107,7 @@
         Label1 As label:
             Fill: =If(ThisItem.IsSelected,RGBA(6,72,34,1))
             Height: =168
-            OnSelect: =Select(Parent);Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & Value(DataCardhora_inicio.Selected.Result)) ; Set(varDelta , Cap_Produtiva - DataCardquantidade)
+            OnSelect: =Select(Parent);Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & Value(DataCardhora_inicio.Selected.Result)) ; Set(varDelta , Cap_Produtiva.Text - DataCardquantidade.Text)
             Size: =21
             Text: =
             Width: =640
@@ -164,7 +165,7 @@
             Color: =RGBA(255, 255, 255, 1)
             Height: =60
             Icon: =Icon.ChevronRight
-            OnSelect: =Select(Parent);Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & Value(DataCardhora_inicio.Selected.Result)) ; Set(varDelta , Cap_Produtiva - DataCardquantidade)
+            OnSelect: =Select(Parent);Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & Value(DataCardhora_inicio.Selected.Result)) ; Set(varDelta , Cap_Produtiva.Text - DataCardquantidade.Text)
             PaddingBottom: =10
             PaddingLeft: =10
             PaddingRight: =10
@@ -240,7 +241,7 @@
         NoSelectionText: ="UTE"
         SearchFields: =["Result"]
         SearchItems: |-
-            =Search(Sort(ForAll(Distinct( CreateMaquina , UTE ), {Result: ThisRecord.Value}).Result , Result),ComboBoxute.SearchText,"Result")
+            =Search(Sort(ForAll(Distinct( CreateMaquina , UTE ), {Result: ThisRecord.Value}).Result , Result),ComboBoxute.SearchText,Result)
         SelectMultiple: =false
         Size: =21
         Width: =160
