--- a/Levantamento de Perdas/Src/AcertoProdu%e7%e3o.fx.yaml
+++ b/Levantamento de Perdas/Src/AcertoProdu%e7%e3o.fx.yaml
@@ -1,11 +1,505 @@
 AcertoProdução As screen:
+    Height: =720
+    Width: =1300
+
+    Rectangle1 As rectangle:
+        Height: =118
+        Width: =1300
+        ZIndex: =1
 
     Label6 As label:
-        Height: =70
+        Align: =Align.Center
+        Color: =RGBA(255, 191, 0, 1)
+        FontWeight: =FontWeight.Bold
+        Height: =37
+        Size: =24
+        Text: ="Acerto Produção"
+        Width: =317
+        X: =464
+        ZIndex: =2
+
+    Icon1_35 As icon.Home:
+        BorderColor: =RGBA(255, 255, 255, 1)
+        Color: =RGBA(255, 255, 255, 1)
+        FocusedBorderThickness: =1
+        Height: =45
+        Icon: =Icon.Home
+        OnSelect: |
+            =Navigate(Tela_Inicial_app)
+        Width: =45
+        X: =173
+        Y: =60
+        ZIndex: =3
+
+    Gallery1 As gallery.galleryVertical:
+        BorderThickness: =2
+        DelayItemLoading: =true
+        Height: =518
+        Items: =LancamentoProducao
+        Layout: =Layout.Vertical
+        LoadingSpinner: =LoadingSpinner.Data
+        TemplateSize: =28
+        Width: =617
+        X: =24
+        Y: =186
+        ZIndex: =4
+
+        Label7 As label:
+            Align: =Align.Center
+            Height: =26
+            OnSelect: =Select(Parent)
+            Size: =12
+            Text: =ThisItem.DATA
+            Width: =105
+            X: =7
+            ZIndex: =1
+
+        Rectangle2 As rectangle:
+            Height: =2
+            OnSelect: =Select(Parent)
+            Width: =607
+            Y: =26
+            ZIndex: =2
+
+        Label7_1 As label:
+            Align: =Align.Center
+            Height: =26
+            OnSelect: =Select(Parent)
+            Size: =12
+            Text: |
+                =ThisItem.UTE
+            Width: =63
+            X: =135
+            ZIndex: =3
+
+        Label7_2 As label:
+            Align: =Align.Center
+            Height: =26
+            OnSelect: =Select(Parent)
+            Size: =12
+            Text: |
+                =ThisItem.MAQUINA
+            Width: =135
+            X: =204
+            Y: =2
+            ZIndex: =4
+
+        Label7_3 As label:
+            Align: =Align.Center
+            Height: =26
+            OnSelect: =Select(Parent)
+            Size: =12
+            Text: =ThisItem.HORA_INICIO
+            Width: =69
+            X: =344
+            ZIndex: =5
+
+        Label7_4 As label:
+            Align: =Align.Center
+            Height: =26
+            OnSelect: =Select(Parent)
+            Size: =12
+            Text: =ThisItem.OPERACAO
+            Width: =69
+            X: =418
+            ZIndex: =6
+
+        Label7_5 As label:
+            Align: =Align.Center
+            Height: =26
+            OnSelect: =Select(Parent)
+            Size: =12
+            Text: =ThisItem.QUANTIDADE
+            Width: =69
+            X: =488
+            Y: =2
+            ZIndex: =7
+
+        Icon4 As icon.OpenInNewWindow:
+            Height: =20
+            Icon: =Icon.Trash
+            OnSelect: =Remove(LancamentoProducao,Gallery1.Selected);
+            Width: =30
+            X: =555
+            Y: =4
+            ZIndex: =8
+
+    Label6_1 As label:
+        Align: =Align.Center
+        FontWeight: =FontWeight.Semibold
+        Height: =37
         Size: =21
-        Text: ="Teste"
-        Width: =560
-        X: =40
-        Y: =40
-        ZIndex: =1
+        Text: ="Aplicativo"
+        Width: =155
+        X: =239
+        Y: =118
+        ZIndex: =5
+
+    Rectangle3 As rectangle:
+        BorderThickness: =2
+        Height: =31
+        Width: =616
+        X: =25
+        Y: =154
+        ZIndex: =6
+
+    Label6_3 As label:
+        Align: =Align.Center
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =25
+        Text: ="DATA"
+        Width: =101
+        X: =38
+        Y: =157
+        ZIndex: =7
+
+    Label6_4 As label:
+        Align: =Align.Center
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =25
+        Text: ="UTE"
+        Width: =53
+        X: =165
+        Y: =157
+        ZIndex: =8
+
+    Label6_5 As label:
+        Align: =Align.Center
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =25
+        Text: ="CAF"
+        Width: =53
+        X: =273
+        Y: =157
+        ZIndex: =9
+
+    Label6_6 As label:
+        Align: =Align.Center
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =25
+        Text: ="HORA"
+        Width: =65
+        X: =377
+        Y: =157
+        ZIndex: =10
+
+    Label6_7 As label:
+        Align: =Align.Center
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =25
+        Text: ="OP."
+        Width: =53
+        X: =461
+        Y: =157
+        ZIndex: =11
+
+    Label6_8 As label:
+        Align: =Align.Center
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =25
+        Text: ="PROD."
+        Width: =65
+        X: =530
+        Y: =157
+        ZIndex: =12
+
+    SelectCaf As combobox:
+        BorderThickness: =1
+        DisplayFields: =["Value"]
+        Height: =35
+        HoverFill: =RGBA(0, 0, 0, 0)
+        IsSearchable: =false
+        Items: =Distinct(Filter(LancamentoProducao, UTE = SelectUte.Selected.Value),MAQUINA)
+        PaddingBottom: =2
+        PaddingLeft: =10
+        PaddingRight: =10
+        PaddingTop: =2
+        SearchFields: =[""]
+        SearchItems: =[]
+        SelectMultiple: =false
+        Size: =12
+        Width: =188
+        X: =635
+        Y: =70
+        ZIndex: =13
+
+    SelectUte As combobox:
+        BorderThickness: =1
+        DisplayFields: =["Value"]
+        Height: =35
+        HoverFill: =RGBA(0, 0, 0, 0)
+        IsSearchable: =false
+        Items: =Sort(Distinct(LancamentoProducao,UTE),Value)
+        PaddingBottom: =2
+        PaddingLeft: =10
+        PaddingRight: =10
+        PaddingTop: =2
+        SearchFields: =["Value"]
+        SearchItems: =[]
+        SelectMultiple: =false
+        Size: =12
+        Width: =138
+        X: =462
+        Y: =70
+        ZIndex: =14
+
+    DatePicker2 As datepicker:
+        Height: =35
+        Size: =13
+        Width: =175
+        X: =245
+        Y: =70
+        ZIndex: =15
+
+    SelectOp As combobox:
+        BorderThickness: =1
+        DisplayFields: =["Value"]
+        Height: =35
+        HoverFill: =RGBA(0, 0, 0, 0)
+        IsSearchable: =false
+        Items: =Distinct(Filter(LancamentoProducao, MAQUINA = SelectCaf.Selected.Value),OPERACAO)
+        PaddingBottom: =2
+        PaddingLeft: =10
+        PaddingRight: =10
+        PaddingTop: =2
+        SearchFields: =["Value"]
+        SearchItems: =Search(Distinct(Filter(LancamentoProducao, MAQUINA = SelectCaf.Selected.Value),OPERACAO),SelectOp.SearchText,Value)
+        SelectMultiple: =false
+        Size: =12
+        Width: =154
+        X: =860
+        Y: =70
+        ZIndex: =16
+
+    Icon1_36 As icon.Home:
+        BorderColor: =RGBA(255, 255, 255, 1)
+        Color: =RGBA(255, 255, 255, 1)
+        FocusedBorderThickness: =1
+        Height: =43
+        Icon: =Icon.Erase
+        OnSelect: |
+            =Reset(DatePicker2);
+            Reset(SelectUte);
+            Reset(SelectCaf);
+            Reset(SelectOp)
+        PaddingBottom: =5
+        PaddingLeft: =5
+        PaddingRight: =5
+        PaddingTop: =5
+        Width: =44
+        X: =1042
+        Y: =62
+        ZIndex: =17
+
+    Label6_9 As label:
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =25
+        Size: =15
+        Text: ="Data"
+        Width: =77
+        X: =245
+        Y: =46
+        ZIndex: =18
+
+    Label6_10 As label:
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =25
+        Size: =15
+        Text: ="Ute"
+        Width: =77
+        X: =462
+        Y: =42
+        ZIndex: =19
+
+    Label6_11 As label:
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =25
+        Size: =14
+        Text: ="CAF"
+        Width: =77
+        X: =635
+        Y: =43
+        ZIndex: =20
+
+    Label6_12 As label:
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =25
+        Size: =14
+        Text: ="OP."
+        Width: =77
+        X: =860
+        Y: =43
+        ZIndex: =21
+
+    Gallery1_1 As gallery.galleryVertical:
+        BorderThickness: =2
+        DelayItemLoading: =true
+        Height: =518
+        Items: =LancamentoProducao_BD
+        Layout: =Layout.Vertical
+        LoadingSpinner: =LoadingSpinner.Data
+        TemplateSize: =28
+        Width: =617
+        X: =661
+        Y: =186
+        ZIndex: =22
+
+        Label7_6 As label:
+            Align: =Align.Center
+            Height: =26
+            OnSelect: =Select(Parent)
+            Size: =12
+            Text: =ThisItem.DATA
+            Width: =105
+            X: =7
+            ZIndex: =1
+
+        Rectangle2_1 As rectangle:
+            Height: =2
+            OnSelect: =Select(Parent)
+            Width: =607
+            Y: =26
+            ZIndex: =2
+
+        Label7_7 As label:
+            Align: =Align.Center
+            Height: =26
+            OnSelect: =Select(Parent)
+            Size: =12
+            Text: |
+                =ThisItem.UTE
+            Width: =63
+            X: =135
+            ZIndex: =3
+
+        Label7_8 As label:
+            Align: =Align.Center
+            Height: =26
+            OnSelect: =Select(Parent)
+            Size: =12
+            Text: |
+                =ThisItem.MAQUINA
+            Width: =135
+            X: =204
+            Y: =2
+            ZIndex: =4
+
+        Label7_9 As label:
+            Align: =Align.Center
+            Height: =26
+            OnSelect: =Select(Parent)
+            Size: =12
+            Text: =ThisItem.HORA_INICIO
+            Width: =69
+            X: =344
+            ZIndex: =5
+
+        Label7_10 As label:
+            Align: =Align.Center
+            Height: =26
+            OnSelect: =Select(Parent)
+            Size: =12
+            Text: =ThisItem.OPERAÇÃO
+            Width: =69
+            X: =425
+            ZIndex: =6
+
+        Label7_11 As label:
+            Align: =Align.Center
+            Height: =26
+            OnSelect: =Select(Parent)
+            Size: =12
+            Text: =ThisItem.QUANTIDADE
+            Width: =69
+            X: =495
+            Y: =2
+            ZIndex: =7
+
+        Icon4_1 As icon.OpenInNewWindow:
+            Height: =20
+            Icon: =Icon.Trash
+            OnSelect: =Remove(LancamentoProducao_BD,Gallery1_1.Selected);
+            Width: =30
+            X: =555
+            Y: =4
+            ZIndex: =8
+
+    Label6_13 As label:
+        Align: =Align.Center
+        FontWeight: =FontWeight.Semibold
+        Height: =37
+        Size: =21
+        Text: ="Power Bi"
+        Width: =155
+        X: =876
+        Y: =118
+        ZIndex: =23
+
+    Rectangle3_1 As rectangle:
+        BorderThickness: =2
+        Height: =31
+        Width: =616
+        X: =662
+        Y: =154
+        ZIndex: =24
+
+    Label6_14 As label:
+        Align: =Align.Center
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =25
+        Text: ="DATA"
+        Width: =101
+        X: =675
+        Y: =157
+        ZIndex: =25
+
+    Label6_15 As label:
+        Align: =Align.Center
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =25
+        Text: ="UTE"
+        Width: =53
+        X: =802
+        Y: =157
+        ZIndex: =26
+
+    Label6_16 As label:
+        Align: =Align.Center
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =25
+        Text: ="CAF"
+        Width: =53
+        X: =910
+        Y: =157
+        ZIndex: =27
+
+    Label6_17 As label:
+        Align: =Align.Center
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =25
+        Text: ="HORA"
+        Width: =65
+        X: =1014
+        Y: =157
+        ZIndex: =28
+
+    Label6_18 As label:
+        Align: =Align.Center
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =25
+        Text: ="OP."
+        Width: =53
+        X: =1098
+        Y: =157
+        ZIndex: =29
+
+    Label6_19 As label:
+        Align: =Align.Center
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =25
+        Text: ="PROD."
+        Width: =65
+        X: =1174
+        Y: =157
+        ZIndex: =30
 
