--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -100,7 +100,7 @@
       "zeroalltabindexes": false
     },
     "Author": "",
-    "BindingErrorCount": 2,
+    "BindingErrorCount": 33,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 1000,
     "DocumentAppType": "Phone",
@@ -185,6 +185,7 @@
     "Engr_3ª_4ª_2915",
     "Vários_2915",
     "Eixos_2915",
-    "AcertoProdução"
+    "AcertoProdução",
+    "AcertoPerdas"
   ]
 }
