--- a/Levantamento de Perdas/Src/AcertoPerdas.fx.yaml
+++ b/Levantamento de Perdas/Src/AcertoPerdas.fx.yaml
@@ -38,17 +38,17 @@ AcertoPerdas As screen:
         Items: |-
             =Sort(
                 Filter(   
-                        LancamentoProducao,
-                            StartsWith(DATA,DatePicker2_1.SelectedDate) Or IsBlank(DatePicker2_1.SelectedDate),
+                        LancamentoPerdas,
+                            StartsWith(DATA,Data2.Text) Or IsBlank(Data2.Text),
                             StartsWith(UTE,SelectUte_1.Selected.Value) Or IsBlank(SelectUte_1.Selected.Value),
                             StartsWith(MAQUINA,SelectCaf_1.Selected.Value) Or IsBlank(SelectCaf_1.Selected.Value),
                             StartsWith(OPERACAO,SelectOp_1.Selected.Value) Or IsBlank(SelectOp_1.Selected.Value)),
                     HORA_INICIO,
-                SortOrder.Descending
+                SortOrder.Ascending
             )
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
-        TemplateSize: =28
+        TemplateSize: =46
         Width: =617
         X: =24
         Y: =186
@@ -56,67 +56,56 @@ AcertoPerdas As screen:
 
         Label7_12 As label:
             Align: =Align.Center
-            Height: =26
+            Height: =44
             OnSelect: =Select(Parent)
             Size: =12
             Text: =ThisItem.DATA
             Width: =105
-            X: =7
             ZIndex: =1
 
         Rectangle2_2 As rectangle:
             Height: =2
             OnSelect: =Select(Parent)
             Width: =607
-            Y: =26
+            Y: =44
             ZIndex: =2
 
         Label7_13 As label:
             Align: =Align.Center
-            Height: =26
+            Height: =44
             OnSelect: =Select(Parent)
             Size: =12
             Text: |
                 =ThisItem.UTE
             Width: =63
-            X: =135
+            X: =121
             ZIndex: =3
 
         Label7_14 As label:
             Align: =Align.Center
-            Height: =26
+            Height: =42
             OnSelect: =Select(Parent)
-            Size: =12
+            Size: =10
             Text: |
                 =ThisItem.MAQUINA
-            Width: =135
-            X: =204
+            Width: =117
+            X: =185
             Y: =2
             ZIndex: =4
 
-        Label7_15 As label:
-            Align: =Align.Center
-            Height: =26
-            OnSelect: =Select(Parent)
-            Size: =12
-            Text: =ThisItem.HORA_INICIO
-            Width: =69
-            X: =344
-            ZIndex: =5
-
         Label7_16 As label:
             Align: =Align.Center
-            Height: =26
+            Height: =44
             OnSelect: =Select(Parent)
-            Size: =12
-            Text: =ThisItem.OPERACAO
-            Width: =69
-            X: =418
+            Size: =9
+            Text: =ThisItem.TIPO_DE_PERDA
+            Width: =121
+            X: =372
             ZIndex: =6
 
         Label7_17 As label:
             Align: =Align.Center
-            Height: =26
+            Height: =44
             OnSelect: =Select(Parent)
             Size: =12
             Text: =ThisItem.QUANTIDADE
@@ -126,13 +115,24 @@ AcertoPerdas As screen:
             ZIndex: =7
 
         Icon4_2 As icon.OpenInNewWindow:
-            Height: =20
+            Height: =30
             Icon: =Icon.Trash
-            OnSelect: =Remove(LancamentoProducao,Gallery1_2.Selected);
-            Width: =30
-            X: =555
-            Y: =4
+            OnSelect: =Remove(LancamentoPerdas,Gallery1_2.Selected);
+            Width: =50
+            X: =550
+            Y: =7
             ZIndex: =8
+
+        Label7_15 As label:
+            Align: =Align.Center
+            Height: =44
+            OnSelect: =Select(Parent)
+            Size: =12
+            Text: |
+                =ThisItem.HORA_INICIO
+            Width: =57
+            X: =307
+            ZIndex: =9
 
     Label6_21 As label:
         Align: =Align.Center
@@ -169,7 +169,7 @@ AcertoPerdas As screen:
         Height: =25
         Text: ="UTE"
         Width: =53
-        X: =165
+        X: =158
         Y: =157
         ZIndex: =8
 
@@ -179,7 +179,7 @@ AcertoPerdas As screen:
         Height: =25
         Text: ="CAF"
         Width: =53
-        X: =273
+        X: =245
         Y: =157
         ZIndex: =9
 
@@ -189,7 +189,7 @@ AcertoPerdas As screen:
         Height: =25
         Text: ="HORA"
         Width: =65
-        X: =377
+        X: =335
         Y: =157
         ZIndex: =10
 
@@ -197,9 +197,9 @@ AcertoPerdas As screen:
         Align: =Align.Center
         Color: =RGBA(255, 255, 255, 1)
         Height: =25
-        Text: ="OP."
-        Width: =53
-        X: =461
+        Text: ="PERDA"
+        Width: =71
+        X: =431
         Y: =157
         ZIndex: =11
 
@@ -207,9 +207,9 @@ AcertoPerdas As screen:
         Align: =Align.Center
         Color: =RGBA(255, 255, 255, 1)
         Height: =25
-        Text: ="PROD."
+        Text: ="QTD"
         Width: =65
-        X: =530
+        X: =523
         Y: =157
         ZIndex: =12
 
@@ -267,13 +267,13 @@ AcertoPerdas As screen:
         Height: =35
         HoverFill: =RGBA(0, 0, 0, 0)
         IsSearchable: =false
-        Items: =Distinct(Filter(LancamentoProducao, MAQUINA = SelectCaf_1.Selected.Value),OPERACAO)
+        Items: =Distinct(Filter(LancamentoPerdas, MAQUINA = SelectCaf_1.Selected.Value),TIPO_DE_PERDA)
         PaddingBottom: =2
         PaddingLeft: =10
         PaddingRight: =10
         PaddingTop: =2
         SearchFields: =["Value"]
-        SearchItems: =Search(Distinct(Filter(LancamentoProducao, MAQUINA = SelectCaf_1.Selected.Value),OPERACAO),SelectOp_1.SearchText,Value)
+        SearchItems: =Search(Distinct(Filter(LancamentoPerdas, MAQUINA = SelectCaf_1.Selected.Value),OPERACAO),SelectOp_1.SearchText,Value)
         SelectMultiple: =false
         Size: =12
         Width: =154
@@ -333,10 +333,10 @@ AcertoPerdas As screen:
 
     Label6_31 As label:
         Color: =RGBA(255, 255, 255, 1)
-        Height: =25
+        Height: =28
         Size: =14
-        Text: ="OP."
-        Width: =77
+        Text: ="Tipo de Perda"
+        Width: =154
         X: =860
         Y: =43
         ZIndex: =21
@@ -512,4 +512,11 @@ AcertoPerdas As screen:
         X: =1174
         Y: =157
         ZIndex: =30
+
+    Data2 As label:
+        Height: =37
+        Size: =15
+        Text: =DatePicker2_1.SelectedDate
+        Width: =139
+        ZIndex: =31
 
